--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,10 @@ yarn-error.log*
 # local env files
 .env*.local
 
-# vercel
-.vercel
-
 # netlify
-.netlify
+.netlify/
+# Note: netlify.toml is NOT ignored, it should be committed
+
+# IDE
+.idea/
+.vscode/
